--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,3 +11,5 @@ Encoding: UTF-8
 LazyData: true
 URL: https://github.com/Rheumatology/rbiotools
 BugReports: https://github.com/Rheumatology/rbiotools/issues
+Depends: 
+    R (>= 2.10)
